# AtlasImager

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  atlasimager.cpp  atlasimager_web.cpp  installer-script.iss
AtlasCommon/: atlasenums.hpp  iimageviewer.hpp
AtlasGUI/: CMakeLists.txt  README.md  atlascontrolwidget.cpp  atlascontrolwidget.hpp  atlascontrolwidget_layout.cpp  atlascontrolwidget_layout.hpp  atlasmainwindow.cpp  atlasmainwindow.hpp  atlasmainwindow_layout.cpp  atlasmainwindow_layout.hpp  atlasprogresspopup_layout.cpp  atlasprogresspopup_layout.hpp  atlasprogresspopupwidget.cpp  atlasprogresspopupwidget.hpp  atlasslider.cpp  atlasslider.hpp  atlassliderstyle.hpp  atlasstyleslider.hpp  opacitySlider.cpp  opacitySlider.hpp  opacitySliderStyle.hpp
AtlasImage/: CMakeLists.txt  image.cpp  image.hpp
AtlasImageViewer/: CMakeLists.txt  atlasimageviewer.cpp  atlasimageviewer.hpp
AtlasImageViewerWeb/: CMakeLists.txt  atlasimageviewerweb.cpp  atlasimageviewerweb.hpp
AtlasLogger/: CMakeLists.txt  atlasconsolelogger.hpp  atlasfilelogger.hpp  atlaslogger.cpp  atlaslogger.hpp  iatlaslogger.hpp
AtlasMessenger/: CMakeLists.txt  atlasmessenger.cpp  atlasmessenger.hpp
AtlasModel/: CMakeLists.txt  model.cpp  model.hpp  modelworker.cpp  modelworker.hpp
resources/: atlasimager.rc
